--- a/frontend/projects/webapp/src/index.html
+++ b/frontend/projects/webapp/src/index.html
@@ -5,9 +5,8 @@
   <title>Don't Forget</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" sizes="16x16 32x32"  href="assets/favicon.ico">
+  <link href="assets/fonts/fonts.css" rel="stylesheet">
 </head>
 <body class="mat-typography">
   <dfo-webapp></dfo-webapp>
