--- a/frontend/projects/webapp/src/index.html
+++ b/frontend/projects/webapp/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>Don't Forget</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Don't Forget">
   <link rel="icon" type="image/x-icon" sizes="16x16 32x32"  href="assets/favicon.ico">
   <link href="assets/fonts/fonts.css" rel="stylesheet">
 </head>
